--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Ardhi Lukianto <ardhi@lukianto.com>",
   "license": "MIT",
   "dependencies": {
-    "cron": "^1.3.0"
+    "cron": "^1.3.0",
+    "delete-empty": "^2.0.0"
   }
 }
