--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rappopo/cuk-task",
-  "version": "0.0.1",
-  "description": "Task scheduler",
+  "version": "0.0.2",
+  "description": "Rappopo CUK Task Scheduler",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
